mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_unicode_identifier.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Unexpected character: 'é'
--> test_scripts/error_cases/lexer_unicode_identifier.mux:2:9
   |
 2 | auto café = 5
   |         ^
   |
= help: This character is not recognized as valid Mux syntax. Check for accidental special characters or encoding issues.
